--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 description = "a cli text editor"
 
 [dependencies]
-crossterm = "0.27"
-clap = { version = "4.5", features = ["derive"] }
+crossterm = "0.28.1"
+clap = { version = "4.5.23", features = ["derive"] }
+ropey = "1.6.1"
