--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 description = "a cli text editor"
 
 [dependencies]
+ratatui = "0.29.0"
 crossterm = "0.28.1"
 clap = { version = "4.5.23", features = ["derive"] }
 ropey = "1.6.1"
