--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ color-eyre = "0.6.3"
 rexpect = "0.6.0"
 tempfile = "3.18.0"
 base64 = "0.22.1"
+
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
