--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ eyre = "0.6.12"
 ratatui = "0.29.0"
 rexpect = "0.6.0"
 ropey = "1.6.1"
-tempfile = "3.18.0"
+# rand = "0.9.1"
 # unicode-segmentation = "1.12.0"
 
 tracing = "0.1.41"
