--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 tree-sitter = "0.25.4"
 tree-sitter-rust = "0.23"
+tree-sitter-zig = "1.1.2"
